# localzure

./: .coverage  .dockerignore  .gitignore  .pylintrc  DESKTOP-004-COMPLETION.md  Dockerfile  Makefile  README.md  STARTUP-SCRIPTS.md  SVC-SB-008-SUMMARY.md  config.example.yaml  docker-compose.yml  grafana-dashboard.json  pyproject.toml  requirements.txt  servicebus_audit.json  start-localzure.ps1  start-localzure.sh
.github/workflows/: ci.yml
desktop/: .eslintrc.json  .gitignore  QUICKSTART.md  README.md  jest.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts
docs/: CHEATSHEET.md  COMPLETE.md  CONTRIBUTING.md  DOCKER.md  INTEGRATION.md  README.md  STATUS.md  SVC-SB-009-SUMMARY.md  architecture.md  servicebus-README.md  servicebus-architecture.md  servicebus-contributing.md  servicebus-logging.md  servicebus-operations.md
docs/guides/: PERSISTENCE-QUICKREF.md  QUICKSTART.md
docs/implementation/: AUTH-002-Implementation-Summary.md  DESKTOP-002-IMPLEMENTATION.md  DESKTOP-003-IMPLEMENTATION.md  EPIC-05-TABLE-STORAGE-ODATA.md  STORY-CORE-001.md  STORY-CORE-002.md  STORY-CORE-003.md  STORY-CORE-004.md  STORY-CORE-005.md  STORY-DESKTOP-001.md  STORY-DESKTOP-002.md  STORY-DESKTOP-003.md  STORY-DESKTOP-004.md  STORY-GATEWAY-001.md  STORY-GATEWAY-002.md  STORY-GATEWAY-003.md  STORY-GATEWAY-004.md  STORY-GATEWAY-005.md  STORY-GATEWAY-006.md  STORY-STATE-001-IMPLEMENTATION.md  STORY-SVC-BLOB-001.md  STORY-SVC-BLOB-002.md  STORY-SVC-BLOB-003.md  STORY-SVC-BLOB-004.md  STORY-SVC-QUEUE-001.md  STORY-SVC-QUEUE-002.md  STORY-SVC-SB-001.md  STORY-SVC-SB-002.md  STORY-SVC-TABLE-001.md  STORY-SVC-TABLE-002.md  SVC-KV-001-COMPLETION.md  SVC-KV-001-INTEGRATION.md  SVC-KV-001.md  servicebus_audit.json
docs/reference/: RELEASE_CHECKLIST.md  architecture.md
docs/summaries/: DESKTOP-001-SUMMARY.md  DESKTOP-002-SUMMARY.md  DESKTOP-003-SUMMARY.md  DESKTOP-004-SUMMARY.md  SVC-SB-010-SUMMARY.md
examples/: .env.example  README.md  config.example.yaml  test_servicebus.py
localzure/: __init__.py  __main__.py  cli.py
localzure.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
localzure/core/: runtime.py  (+7 more)
scripts/: README.md  bootstrap.py
tests/: conftest.py  test_servicebus_metrics.py
(+190 files in other folders)
